@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: winDde.test,v 1.13 2003/01/16 20:51:57 hobbs Exp $
+# RCS: @(#) $Id: winDde.test,v 1.14 2003/03/22 23:01:22 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -53,6 +53,7 @@ proc createChildProcess { ddeServerName } {
     puts $f [list dde servername $ddeServerName]
     puts $f {
 	puts ready
+        flush stdout
 	vwait done
 	update
 	exit
@@ -60,7 +61,8 @@ proc createChildProcess { ddeServerName } {
     close $f
     
     set f [open |[list [interpreter] $::scriptName] r]
-    gets $f
+    fconfigure $f -buffering line
+    gets $f line
     return $f
 }
 
@@ -80,6 +82,11 @@ test winDde-2.2 {Checking for existence, with service and topic specified} \
 test winDde-2.3 {Checking for existence, with only the service specified} \
 	{pcOnly} {
     expr [llength [dde services TclEval {}]] >= 1
+} 1
+
+test winDde-2.4 {Checking for existence, with only the topic specified} \
+	{pcOnly} {
+    expr [llength [dde services {} self]] >= 1
 } 1
 
 test winDde-3.1 {DDE execute locally} {pcOnly} {
@@ -121,7 +128,7 @@ test winDde-4.1 {DDE execute remotely} {stdio pcOnly} {
     set a
 } ""
 
-test winDde-4.2 {DDE execute remotely} {stdio pcOnly} {
+test winDde-4.2 {DDE execute async remotely} {stdio pcOnly} {
     set a ""
     set child [createChildProcess child]
     dde execute -async TclEval child {set a "foo"}
@@ -130,7 +137,7 @@ test winDde-4.2 {DDE execute remotely} {stdio pcOnly} {
     set a
 } ""
 
-test winDde-4.3 {DDE request locally} {stdio pcOnly} {
+test winDde-4.3 {DDE request remotely} {stdio pcOnly} {
     set a ""
     set child [createChildProcess child]
     dde execute TclEval child {set a "foo"}
@@ -140,7 +147,7 @@ test winDde-4.3 {DDE request locally} {stdio pcOnly} {
     set a
 } foo
 
-test winDde-4.4 {DDE eval locally} {stdio pcOnly} {
+test winDde-4.4 {DDE eval remotely} {stdio pcOnly} {
     set a ""
     set child [createChildProcess child]
     set a [dde eval child set a "foo"]
